# Microsoft-Windows-NT-Repository

./: ALLFILES.TXT  ALLFILES.Z  DIRS.TXT  GANDER.HLP  GANDER.INI  GO.BAT  INDEX.TXT  INDEX.Z  README.TXT  TREEINFO.NCD
FREEWARE/v30/vgp1_1/src/: aaa_vms.notes  algebra.c  algebra.h  configure.in  install  link_axp.com  link_decc.com  readme  rotation.c  stostr.m  todo  vgp  vgp.1  vgp.c  vgp.h  vgp.hlp  vgp.m  vms.opt  vms_axp.opt  vms_axp_12.opt  vms_decc_12.opt  wc.c
FREEWARE/v50/pacman-1_002/: aclocal.m4  arg.h  basis.h  blank.h  board.cc  board.h  bonus.h  bonuslif.h  bonuspnt.h  build_vms.com  changelog  colour.h  configure  configure.in  corner.h  corner1.h  corner2.h  corner3.h  corner4.h  cross.h  descrip.mms  direc.h  dynamiel.h  e0.h  e180.h  e270.h  e90.h  edible.h  element.h  endwall.h  food.h  freeware_readme.txt  gamedata.cc  gamedata.h  gblank.h  gboard.cc  gboard.h  gbonlife.h  gbonpnt.h  gbonus.h  (+42 more)
FREEWARE/v50/pacman-1_002/cxx_repository/: cxx$demangler_db
FREEWARE/v50/xpdf/xpdf-092/: aclocal.m4  announce  changes  configure  configure.in  dj_make.bat  install  makefile.in  readme  vms_make.com  vms_make_t1.com  vms_make_t1_freetype.com  xpdf.opt
UNIX/SOURCE/binutils-2.3/binutils/: ChangeLog  Makefile  Makefile.in  NEWS  README  ar.c  arlex.c  arparse.c  arsup.c  arsup.h  bucomm.c  bucomm.h  config.status  configure.in  filemode.c  nlmconv.c  nlmheader.c  nlmheader.y  nm.c  objcopy.c  objdump.c  size.c  strings.c
UNIX/SOURCE/cpio-2.3/: Makefile  Makefile.in  README.LEMIS  config.status  configure  configure.in
UNIX/SOURCE/cpio-2.3/package.LEMIS/: pkginfo  prototype
UNIX/SOURCE/fileutils-3.9/: Makefile  Makefile.in  README  README.LEMIS  TAGS  acconfig.h  config.h  config.h.in  config.status  configure  configure.in
UNIX/SOURCE/fileutils-3.9/lib/: Makefile  eaccess.c  getdate.c  mkdir.c  posixtm.c  rename.c
UNIX/SOURCE/fileutils-3.9/man/: Makefile  Makefile.in
UNIX/SOURCE/fileutils-3.9/package.LEMIS/: copyright  pkginfo  prototype
UNIX/SOURCE/fileutils-3.9/src/: Makefile  Makefile.in  cp-aux.c  cp-hash.c  cp.h  mvdir.c  version.c
UNIX/SOURCE/fontutils-0.6/: AUTHORS  ChangeLog  GNUmakefile  GNUmakefile.in  INSTALL  NEWS  README  README.LEMIS  config.status  configure  configure.in
UNIX/SOURCE/fontutils-0.6/bpltobzr/: .gdbinit  ChangeLog  GNUmakefile  M.depend  README  bpl.h  bpl.y  main.c  main.h  version.c
UNIX/SOURCE/fontutils-0.6/bzr/: ChangeLog  GNUmakefile  M.depend  README  bzr_input.c  bzr_opcodes.h  bzr_output.c  bzr_types.h
UNIX/SOURCE/fontutils-0.6/bzrto/: .gdbinit  ChangeLog  GNUmakefile  M.depend  README  bzrbuildch.PS  bzredit.el  ccc.h  ccc.y  char.c  char.h  input-ccc.c  input-ccc.h  main.c  main.h  metafont.c  metafont.h  pstype1.c  pstype1.h  pstype3.c  pstype3.h  psutil.c  psutil.h  text.c  text.h  version.c
UNIX/SOURCE/fontutils-0.6/charspace/: .gdbinit  ChangeLog  GNUmakefile  M.depend  README  char.c  char.h  cmi.h  cmi.y  input-cmi.c  input-cmi.h  kern.c  kern.h  main.c  main.h  output.c  output.h  realstrval.h  symtab.c  symtab.h  version.c
UNIX/SOURCE/fontutils-0.6/data/: ChangeLog  adobestd.enc  common.cmi  defs.make  defslib.make  defsprog.make  dvips.enc  ggmr.1200cmi  ggmr.ifi  mflogo.enc  printeps.tex  psymbol.enc  testfont.tex  texlatin.enc  textext.enc  zdingbat.enc
UNIX/SOURCE/fontutils-0.6/doc/: Makefile  Makefile.in  bpltobzr.texi  bugs.texi  bzredit.texi  bzrto.texi  charspace.texi  copying.texi  enhance.texi  filefmts.texi  fontcvt.texi  fontu.info  fontu.info-2  fontu.info-3  fontu.texi  freedom.texi  gsrenderf.texi  imageto.texi  imgrotate.texi  index.texi  install.texi  intro.texi  limn.texi  overview.texi  texinfo.tex  update.el  xbfe.texi
UNIX/SOURCE/fontutils-0.6/fontconvert/: .gdbinit  ChangeLog  GNUmakefile  M.depend  README  filter.c  filter.h  main.c  main.h  output-epsf.c  output-epsf.h  output-gf.c  output-gf.h  output-tfm.c  output-tfm.h  random.c  random.h  version.c
UNIX/SOURCE/fontutils-0.6/gf/: ChangeLog  GNUmakefile  M.depend  README  gf_input.c  gf_opcodes.h  gf_output.c
UNIX/SOURCE/fontutils-0.6/gsrenderfont/: .gdbinit  ChangeLog  GNUmakefile  M.depend  README  fixifibb.awk  gsrenderfont  gsrf.in  main.c  (+4 more)
UNIX/SOURCE/gdbm-1.7.1/: ChangeLog  Makefile  Makefile.in  NEWS  README  README.LEMIS  autoconf.h  autoconf.h.in  bucket.c  close.c  config.status  configure  configure.in  conv2gdbm.c  dbmclose.c  dbmdelete.c  dbmdirfno.c  dbmfetch.c  dbmpagfno.c  dbmrdonly.c  delete.c  extern.h  falloc.c  fetch.c  findkey.c  gdbm.proto  gdbm.proto2  gdbm.texinfo  gdbmconst.h  gdbmdefs.h  gdbmdelete.c  gdbmerrno.c  gdbmexists.c  gdbmfetch.c  gdbmopen.c  gdbmreorg.c  gdbmseq.c  gdbmsetopt.c  seq.c  systems.h  (+5 more)
UNIX/SOURCE/m4-1.1/: ChangeLog  Makefile  Makefile.in  NEWS  README  README.LEMIS  THANKS  TODO  ansi2knr.c  builtin.c  c-boxes.el  config.status  configure  configure.in  debug.c  eval.c  format.c  input.c  m4.c  m4.h  m4.texinfo  macro.c  output.c  path.c  symtab.c
UNIX/SOURCE/oleo-1.3/: ANNOUNCE  ChangeLog  INSTALL.OLEO  KEYS  Makefile  Makefile.in  NEWS  args.c  args.h  basic.c  basic.h  busi.c  byte-compile.c  cell.h  cells.c  cmd.c  cmd.h  config.status  configure  configure.in  decompile.c  decompile.h  defun.h  defuns.h  display.c  display.h  eval.c  font.c  font.h  format.c  format.h  forminfo.c  forminfo.h  funcs.c  funcs.h  getopt.c  global.h  graph.c  graph.h  hash.c  (+49 more)
UNIX/SOURCE/textutils-1.9/: Makefile  Makefile.in  README  README.LEMIS  config.h  config.h.in  config.status  configure  configure.in
UNIX/SOURCE/tslip-2.3/: Autodial.notes  COPYRIGHT  ChangeLog  HISTORY_OF_TSLIP  IP.SKETCH  Makefile  Makefile.in  PATCHES_TO_SAS-1.25  PATCHES_TO_STOCK_TAYLOR1.04  QandA  README  README.LEMIS  TODO  acconfig.h  config.h  config.h.in  config.status  configure  configure.in  get_version.sh  guess_tuucpsrc  patchlevel.h  sysdep.h  warn_of_sasbug
UNIX/SOURCE/wdiff-0.03/: ChangeLog  INSTALL  Makefile  Makefile.in  README  config.status  configure  configure.in  readpipe.c  testinput1  testinput2  testoutput  unproto.l  version.c  wdiff.c  wdiff.info  wdiff.texi  writepipe.c
(+43679 files in other folders)
