dnl Process this file with autoconf to produce a configure script.
AC_INIT(limn/fit.c)

dnl Write output here, instead of putting -D's on the command line.
AC_CONFIG_HEADER([[[include/c-auto.h]]])

# We must have gcc.
AC_PROG_CC
[if test -n "$GCC"
then :
else
  echo "Warning: these programs are written in GNU C,"
  echo "so you need to have gcc."
fi]
AC_PROG_CPP
AC_GCC_TRADITIONAL
AC_PROG_INSTALL
AC_PROG_RANLIB

AC_AIX
AC_DYNIX_SEQ
AC_ISC_POSIX
AC_ISC_WLIBS
AC_MINIX
AC_XENIX_DIR

AC_DIR_HEADER
AC_HEADER_CHECK(limits.h, :, AC_DEFINE(LIMITS_H_MISSING))
AC_HEADER_CHECK(float.h, :, AC_DEFINE(FLOAT_H_MISSING))
AC_MEMORY_H
AC_STDC_HEADERS
AC_UNISTD_H
AC_USG

AC_X11_LOCATION
AC_PREFIX(gcc)

# This will generate `Makefile'(s), `config.status', and our header file.
AC_OUTPUT(./GNUmakefile doc/Makefile)
