dnl Process this file with autoconf to produce a configure script.
dnl
define(FP_STDC_CHECK,
[echo checking if __STDC__ defined
AC_TEST_CPP([#ifdef __STDC__
#include <nonexistent.h>
#endif], [U=_])AC_SUBST(U)])
dnl
dnl
AC_INIT(wdiff.c)
AC_PROG_CC
AC_PROG_LEX
AC_PROG_INSTALL
AC_PROGRAMS_CHECK(DIFF, gdiff diff)
if test -z "$DIFF"; then
  echo "No diff program found.  Cannot continue."
  exit 1
fi
AC_PROGRAMS_CHECK(PAGER, less more)

echo checking for Xenix
AC_PROGRAM_EGREP(yes,
[#if defined(M_XENIX) && !defined(M_UNIX)
  yes
#endif
], XENIX=1)
if test -n "$XENIX"; then
  LIBS="$LIBS -ltermlib"
else
  LIBS="$LIBS -ltermcap"
fi

FP_STDC_CHECK
AC_STDC_HEADERS
AC_HAVE_HEADERS(termcap.h)
AC_CONST
AC_RETSIGTYPE
AC_HAVE_FUNCS(tputs)
AC_REPLACE_FUNCS(strstr)
AC_ALLOCA
AC_USG
AC_OUTPUT(Makefile)
