dnl Process this file with autoconf to produce a configure script.
AC_INIT(Xstuff.c)

dnl Checks for programs.
AC_PROG_CC
AC_PATH_XTRA
if test $x_libraries; then
  xlib=-L$x_libraries;
fi
if test $x_includes; then
  xinc=-I$x_includes;
fi
AC_SUBST(xinc)
AC_SUBST(xlib)


dnl Checks for libraries.
AC_CHECK_LIB(m, main, , ,-lc -L/usr/lib)
AC_CHECK_LIB(gen, main, , ,)
dnl AC_CHECK_LIB(X11, XDrawLine, , ,$xlib)
dnl AC_CHECK_LIB(Xmu, XmuClientWindow, , ,$xlib)
AC_CHECK_LIB(X11, main, , , $X_PRE_LIBS  $xlib $X_EXTRA_LIBS)
AC_CHECK_LIB(Xmu, main, , ,$xlib)
AC_CHECK_LIB(Xt, main, , ,$xlib)
AC_CHECK_LIB(Xm, main, , ,$xlib)

dnl if test $USE_LESSTIF; then
dnl   AC_MSG_CHECKING(for LessTif)
dnl   LESSTIF=`find $HOME -name "lesstif-?????-????" -print 2> /dev/null | grep -v tar | head -1`
dnl   AC_SUBST(LESSTIF)
dnl   if test $LESSTIF; then
dnl     { AC_MSG_RESULT($LESSTIF)
dnl     AC_DEFINE(LESSTIF) };
dnl   else 
dnl    AC_MSG_ERROR(Neither Motif nor LessTif found.);
dnl   fi
dnl fi

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.

AC_OUTPUT(Makefile)
