# This file is a shell script that supplies the information necessary
# to tailor a template configure script into the configure script
# appropriate for this directory.  For more information, check any
# existing configure script.

srctrigger=ar.c
srcname="Binutils"

configdirs="testsuite"

# per-host:

. ${srcdir}/../bfd/configure.host

host_makefile_frag=
if [ -f ${srcdir}/../bfd/config/${my_host}.mh ] ; then
	host_makefile_frag=../bfd/config/${my_host}.mh
fi

# per-target:

# Canonicalize the secondary target names.
if [ -n "$with_targets" ]; then
    for targ in `echo $with_targets | sed 's/,/ /g'`
    do
	result=`$configsub $targ 2>/dev/null`
	if [ -n "$result" ]; then
	    canon_targets="$canon_targets $result"
	else
	    # Allow targets that config.sub doesn't recognize, like "all".
	    canon_targets="$canon_targets $targ"
	fi
    done
fi

all_targets=false
build_nlmconv=false

for targ in $target $canon_targets
do
    bfd_target=`$srcdir/../bfd/config.bfd $targ`

    if [ "x$bfd_target" = "xall" ]; then
        all_targets=true
	build_nlmconv=true
    else
	if [ ! -f ${srcdir}/../bfd/config/${bfd_target}.mt ] ; then
	    echo '***' No file ${srcdir}/../bfd/config/${bfd_target}.mt 1>&2
	    echo '***' binutils does not support target ${bfd_target} 1>&2
	    echo '***' Look in bfd/configure.in for supported targets 1>&2
	    exit 1
	fi

	if [ "x$targ" = "x$target" ]; then
	    target_makefile_frag=${srcdir}/../bfd/config/${bfd_target}.mt
	else
	    target_extra_frags="$target_extra_frags ${srcdir}/../bfd/config/${bfd_target}.mt"
	fi

	case $targ in
	*-*-netware*) build_nlmconv=true ;;
	esac
    fi
done

# We don't do any links based on the target system, just makefile config.

# post-target:

rm -f Makefile.tmp Makefile.2
mv Makefile Makefile.tmp

if [ x${all_targets} = xfalse ]; then

    allfrags="$target_makefile_frag $target_extra_frags"

    # The architectures in all the configured targets.
    SELECT_ARCHITECTURES=`sed -n '
    s/SELECT_ARCHITECTURES[ 	]*=[ 	]*//p
    ' $allfrags`

    ad=`echo $SELECT_ARCHITECTURES | sed -e s/bfd_/-DARCH_/g -e 's/_arch//g'`

    echo "ARCHDEFS = $ad" >> Makefile.2

else	# all_targets is true
    echo 'ARCHDEFS = -DARCH_all' >> Makefile.2
fi	# all_targets is true

if [ "x${build_nlmconv}" = "xtrue" ]; then
    echo 'BUILD_NLMCONV = $(NLMCONV_PROG)' >> Makefile.2
fi

cat Makefile.tmp >> Makefile.2
rm -f Makefile.tmp
mv Makefile.2 Makefile
