# This file is a shell script fragment that supplies the information
# necessary to tailor a template configure script into the configure
# script appropriate for this directory.  For more information, check
# any existing configure script.

srctrigger=nm.exp
srcname="DejaGnu"

# per-host:

# per-target:

target_makefile_frag=../config/mt-${target_alias}

# remove the output format from the linker script so it won't produce
# srecords. NM needs a file that contains symbols
case "${target}" in
m68*-abug-*)	rm -f ./m68k.gld ;
		sed -e '/OUTPUT_FORMAT/ d' ${srcdir}/../config/m68k.gld > ./m68k.gld ;;
esac

# post-target:
